--- a/style.css
+++ b/style.css
@@ -2,175 +2,259 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
-    background: #bbbbbb51;
-}
-
-a{
-    color: #000;
-}
-
-.header{
-    min-width: 230px;
-    background-color: #fff;
-    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .2);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 3;
-    height: 10vh;
-}
-
-.header .menu{
-    overflow: hidden;
-    background-color: #fff;
-    height:10vh;
+    background: #bbbbbb3c;
 }
 
 
-.header .menu  a{
-    display: block;
-    padding: 20px;
-    text-align: center;
-    outline: 1px solid #3333332a;
-    border-right: 1px solid #aaa;
-}
-
-.header .menu{
-    clear: both;
-    display: none;
-}
-
-
-
-.header .menu a:hover{
-    background: #ddd;
-}
-
-.header .logo{
-    float: left;
-    font-size: 2em;
-    display: block;
-    padding: 10px 20px;
-}
-
-
-
-
-
-
-
-.header .menu-bars{
-    position: relative;
-    padding: 28px 20px;
-    float: right;
-    cursor: pointer;
-}
-
-
-.header .menu-bars .nav-bar,
-.header .menu-bars .nav-bar::before,
-.header .menu-bars .nav-bar::after{
-    height: 2px;
-    width: 18px;
-    background: #333;
-    display: block;
-    transition: all .2s ease-out;
-}
-
-.header .menu-bars .nav-bar{
-    position: relative;
-}
-
-.header .menu-bars .nav-bar::before{
-    content: "";
-    position: absolute;
-    bottom: 5px;
-    left: 0;
-}
-
-.header .menu-bars .nav-bar::after{
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 0;
-}
-
-.header .menu-button{
-    display: none;
-}
-.header .menu-button:checked ~ .menu{
-    display: block;
+.main{
+    max-width: 1300px;
+    min-width: 290px;
+    margin: 0 auto;
+    background: #bbbbbb65;
     height: 100vh;
 }
 
+.main-header{
+    height: 10vh;
+    background-color: antiquewhite;
+}
+
+.main-header-nav{
+    position: relative;
+}
+
+.check{
+    position: absolute;
+    right: 0;
+    top: 5vh;
+}
+
+.menu-bars,
+.menu-bars::before,
+.menu-bars::after{
+    position: absolute;
+    right: 5px;
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color:#2f2828;
+    transition: all .2s ease-out;
+}
+
+.menu-bars::before{
+    content: "";
+    top: -7px;
+}
+
+.menu-bars::after{
+    content: "";
+    top: 7px;
+}
 
 
-.header .menu-button:checked ~ .menu-bars .nav-bar::after{
-    /* transform-origin: center; */
+.main-header-nav-ul li {
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+
+.log{
+    text-decoration: underline;
+    display: block;
+    padding: 0px 20px;
+    line-height: 10vh;
+    width: fit-content;
+}
+
+.log:hover{
+    background-color: antiquewhite;
+}
+
+.main-header-nav-ul-mobile .item{
+    line-height: 10vh;
+    padding: 0px 20px;
+}
+
+.main-header-nav-ul-mobile .item:hover{
+    background-color: #bbb;
+}
+
+
+.main-header-nav-ul-mobile{
+    background-color: aquamarine;
+    display: none;
+    flex-direction: column;
+    text-align: center;
+}
+
+
+
+ .checks:checked ~ .main-header-nav-ul-mobile{
+    display: flex;
+    height: 90vh;
+}
+.checks:checked ~ .menu-bars{
+    background: transparent;
+}
+
+.checks:checked ~ .menu-bars::before{
     transform: rotate(45deg);
-    top: 0px;
-    background: red;
+    top: 0;
 }
 
-.header .menu-button:checked ~ .menu-bars .nav-bar::before{
+.checks:checked ~ .menu-bars::after{
     transform: rotate(-45deg);
-    bottom: 0px;
-    background: red;
+    top: 0;
 }
 
-.header .menu-button:checked ~ .menu-bars .nav-bar{
-    background-color: white;
+.checks{
+    display: none;
+}
+
+.options{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin: 40px auto;
 }
 
 
 
+.hire-me,
+.download-cv{
+    display: flex;
+    align-items: center;
+    border-radius: 20em;
+    height: 8vh;
+    background-color: #bbb;
+    place-content: center;
+}
+    .second{
+        display: none;
+    }
 
 
-@media screen and (min-width: 576px){
-    .header{
-        height: 10vh;
-        display: flex;
-        justify-content: space-between;
+/* tablet view */
+@media all and (min-width:568px){
+    .first{
+        display: none;
+    }
+    .options{
         align-items: center;
+        position: absolute;
+        right: 50px;
+        top: 0;
+        gap: 5px;
+        height: 10vh;
+        display: block;
+        margin: 0 auto;
     }
-    .header .menu{
+
+
+    .hire-me,
+    .download-cv{
+        height: 7vh;
+    }
+    .options{
+        display: grid;
+    }
+    .main-header-nav-ul-mobile{
         display: flex;
-        clear: none;
-        justify-content: right;
-        
     }
 
-    .header .menu li:last-child{
+    .main-header-nav-ul-tablet{
         display: none;
-    }
-    .header .menu  a{
-        padding: 20px 15px;
-        outline: none;
-        outline: 0px solid #3333332a;
-        border-right: 0px solid #aaa;
-        font-size: 1.4rem;
-    }
-    .header .menu-bars{
-        display: none;
+        height: 90vh;
     }
 
-    .header .logo{
+    .checks:checked  ~ .main-header-nav-ul-tablet{
         display: block;
-        padding: 20px 15px;
-        font-size: 1.7rem;
+    }
+
+
+/* bars for tablet view */
+
+    .menu-bar,
+    .menu-bar::before,
+    .menu-bar::after{
+        position: absolute;
+        right: 5px;
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color:#2f2828;
+        transition: all .2s ease-out;
+    }
+
+    .menu-bar::before{
+        content: "";
+        top: -7px;
+    }
+
+    .menu-bar::after{
+        content: "";
+        top: 7px;
+    }
+
+    .second:checked ~ .menu-bar{
+        background: transparent;
+    }
+    
+    .second:checked ~ .menu-bar::before{
+        transform: rotate(45deg);
+        top: 0;
+    }
+    
+    .second:checked ~ .menu-bar::after{
+        transform: rotate(-45deg);
+        top: 0;
     }
 
 }
 
-@media screen and (min-width: 700px){
-    .header .menu li:last-child{
-        display: block;
+@media screen and (min-width:930px ){
+    .first,
+    .second{
+        display: none;
+    }
+    .logo{
+        order: 1;
+    }
+    .main-header-nav-ul-tablet{
+        display: flex;
+        position: absolute;
+        top: 0; 
+        right: 280px;
+    }
+    .main-header-nav-ul-tablet li{
+        display: inline-block;
+        height: fit-content;
+    }
+
+    .main-header-nav-ul-tablet li a{
+        padding: 0 0px;
+
+    }
+
+    .main-header-nav-ul-mobile{
+        background-color: transparent;
+        height: 10vh;  
+    }
+
+    .options{
+        right: 10px;
     }
 }
+
+
+/* 
+
+nav bar ends
+
+*/
