--- a/style.css
+++ b/style.css
@@ -1,31 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins',sans-serif;
+  font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
 
-body{
+body {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  Background: linear-gradient(to top, #161616  0%, #c10909 100%);
 }
-.container{
+
+body {
+  background: linear-gradient(to top, #161616 0%, #c10909 100%);
+  background-repeat: no-repeat;
+  min-height: 100dvh;
+}
+
+.container {
   max-width: 800px;
   width: 100%;
   background-color: #ffffffca;
   padding: 25px 30px;
   margin: 0 auto;
   border-radius: 5px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
+  /* display: none; */
 }
 
-.container .title button{
+.container .title button {
   width: 120px;
   height: 35px;
   border-radius: 5px;
@@ -36,35 +43,32 @@ body{
   letter-spacing: 1px;
   cursor: pointer;
   transition: all 0.3s ease;
-  Background: linear-gradient(90deg, #161616  0%, #650000 100%);
-  
+  background: linear-gradient(90deg, #161616 0%, #650000 100%);
 }
 
-.container .title button a{
+.container .title button a {
   color: #fff;
 }
 
-@media screen and (max-width: 584px){
-  .container .title button{
+@media screen and (max-width: 584px) {
+  .container .title button {
     width: 180px;
   }
 
-  .container{
+  .container {
     margin-top: 30px;
   }
 }
 
-
-.container .title{
+.container .title {
   font-size: 25px;
   font-weight: 500;
-  
 }
 
-.container .title #abo_plus{
+.container .title #abo_plus {
   position: relative;
 }
-.container .title #abo_plus::before{
+.container .title #abo_plus::before {
   content: "";
   position: absolute;
   display: block;
@@ -73,27 +77,27 @@ body{
   height: 3px;
   width: 110px;
   border-radius: 5px;
-  Background: linear-gradient(90deg, #161616  0%, #650000 100%);
+  background: linear-gradient(90deg, #161616 0%, #650000 100%);
   margin-bottom: -3px;
 }
 
-.content form .user-details{
+.content form .user-details {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 20px 0 12px 0;
 }
 
-form .user-details .input-box{
+form .user-details .input-box {
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
 }
-form .input-box span.details{
+form .input-box span.details {
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
 }
-.user-details .input-box input{
+.user-details .input-box input {
   height: 45px;
   width: 100%;
   outline: none;
@@ -105,25 +109,27 @@ form .input-box span.details{
   transition: all 0.3s ease;
 }
 .user-details .input-box input:focus,
-.user-details .input-box input:valid{
+.user-details .input-box input:valid {
   border-color: #161616;
 }
- form .gender-details .gender-title{
+
+form .gender-details .gender-title {
   font-size: 20px;
   font-weight: 500;
- }
- form .category{
-   display: flex;
-   width: 80%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .category label .dot{
+}
+form .category {
+  display: flex;
+  width: 80%;
+  margin: 14px 0;
+  justify-content: space-between;
+}
+
+form .category label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+form .category label .dot {
   height: 18px;
   width: 18px;
   border-radius: 50%;
@@ -132,80 +138,79 @@ form .input-box span.details{
   border: 5px solid transparent;
   transition: all 0.3s ease;
 }
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two,
- #dot-3:checked ~ .category label .three{
-   background: #161616;
-   border-color: #742323af;
- }
-
- 
- form input[type="radio"]{
-   display: none;
- }
-
-
- form .button{
-   height: 45px;
-   margin: 35px 0
- }
- form .button input{
-   height: 100%;
-   width: 100%;
-   border-radius: 5px;
-   border: none;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   Background: linear-gradient(90deg, #161616  0%, #650000 100%)
- }
- form .button input:hover{
-  Background: linear-gradient(90deg, #161616  0%, #650000 100%)
-  }
-
- @media(max-width: 584px){
- .container{
-  max-width: 100%;
+#dot-1:checked ~ .category label .one,
+#dot-2:checked ~ .category label .two,
+#dot-3:checked ~ .category label .three {
+  background: #161616;
+  border-color: #742323af;
 }
 
-form .user-details .input-box{
+form input[type="radio"] {
+  display: none;
+}
+
+form .button {
+  height: 45px;
+  margin: 35px 0;
+}
+form .button input {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background: #650000;
+}
+
+form .button input:hover {
+  transition: all 0.3s linear;
+}
+
+@media (max-width: 584px) {
+  .container {
+    max-width: 100%;
+  }
+
+  form .user-details .input-box {
     margin-bottom: 15px;
     width: 100%;
   }
-  form .category{
+  form .category {
     width: 100%;
   }
-  .content form .user-details{
+  .content form .user-details {
     max-height: 300px;
     overflow-y: scroll;
   }
-  .user-details::-webkit-scrollbar{
+  .user-details::-webkit-scrollbar {
     width: 5px;
   }
-  }
-  @media(max-width: 459px){
-  .container .content .category{
+}
+@media (max-width: 459px) {
+  .container .content .category {
     flex-direction: column;
   }
 }
 
-.container .have_an_account p{
-  margin-right:5px ;
+.container .have_an_account p {
+  margin-right: 5px;
 }
 
-.container .have_an_account{
+.container .have_an_account {
   display: flex;
 }
 
-@media screen and (max-width:350px){
-  .container .have_an_account{
+@media screen and (max-width: 350px) {
+  .container .have_an_account {
     flex-direction: column;
   }
 }
 
-.container .have_an_account a{
+.container .have_an_account a {
   color: #4f0aee;
 }
